[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-loop-library-mcp"
version = "1.0.0"
description = "Read-only MCP server for AI Loop Library: pick bounded, verifiable work loops and render runnable protocols."
requires-python = ">=3.9"
license = { text = "MIT" }

[project.urls]
Homepage = "https://ailooplibrary.com/for-agents/"
Repository = "https://github.com/paultaki/ailooplibrary-mcp"

[project.scripts]
ai-loop-library-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
