[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-loop-library-mcp"
version = "2.0.0"
description = "Read-only MCP server for AI Loop Library: browse and shortlist bounded, verifiable work loops, render runnable protocols, lint loop designs, and scaffold new ones."
requires-python = ">=3.9"
license = { text = "MIT" }

[project.urls]
Homepage = "https://ailooplibrary.com/for-agents/"
Repository = "https://github.com/paultaki/ailooplibrary-mcp"

[project.scripts]
ai-loop-library-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
